--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -49,19 +49,19 @@ jobs:
         # https://github.com/github/feedback/discussions/7835#discussioncomment-1769026
         buildplat:
           - [ubuntu-22.04, manylinux_x86_64, ""]
-          - [ubuntu-22.04, musllinux_x86_64, ""]
-          - [ubuntu-22.04-arm, manylinux_aarch64, ""]
-          - [ubuntu-22.04-arm, musllinux_aarch64, ""]
-          - [macos-13, macosx_x86_64, openblas]
-
-          # targeting macos >= 14. Could probably build on macos-14, but it would be a cross-compile
-          - [macos-13, macosx_x86_64, accelerate]
-          - [macos-14, macosx_arm64, openblas]
-          - [macos-14, macosx_arm64, accelerate]
-          - [windows-2022, win_amd64, ""]
-          - [windows-2022, win32, ""]
-          - [windows-11-arm, win_arm64, ""]
-        python: ["cp311", "cp312", "cp313", "cp313t", "cp314", "cp314t", "pp311"]
+#          - [ubuntu-22.04, musllinux_x86_64, ""]
+#          - [ubuntu-22.04-arm, manylinux_aarch64, ""]
+#          - [ubuntu-22.04-arm, musllinux_aarch64, ""]
+#          - [macos-13, macosx_x86_64, openblas]
+#
+#          # targeting macos >= 14. Could probably build on macos-14, but it would be a cross-compile
+#          - [macos-13, macosx_x86_64, accelerate]
+#          - [macos-14, macosx_arm64, openblas]
+#          - [macos-14, macosx_arm64, accelerate]
+#          - [windows-2022, win_amd64, ""]
+#          - [windows-2022, win32, ""]
+#          - [windows-11-arm, win_arm64, ""]
+        python: ["cp311"]#, "cp312", "cp313", "cp313t", "cp314", "cp314t", "pp311"]
         exclude:
           # Don't build PyPy 32-bit windows
           - buildplat: [windows-2022, win32, ""]
@@ -158,7 +158,7 @@ jobs:
           CIBW_BUILD: ${{ matrix.python }}-${{ matrix.buildplat[1] }}
           SRC: ${{ github.workspace }}/numpy-src
         run: |
-          python -m pip install cibuildwheel==3.1.3
+          python -m pip install cibuildwheel==3.1.4
           python -m cibuildwheel numpy-src --config-file cibuildwheel.toml --output-dir ./dist
 
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
