--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -147,6 +147,7 @@ jobs:
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: "3.14"
+          allow-prereleases: true
 
       - name: Pyodide setup
         if: ${{ matrix.buildplat[1] == 'pyodide_wasm32' }}
