--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -144,23 +144,33 @@ jobs:
           fi
 
       # Used to run cibuildwheel
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
-        with:
-          python-version: "3.14"
-          allow-prereleases: true
+#      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+#        with:
+#          python-version: "3.14"
+#          allow-prereleases: true
 
       - name: Pyodide setup
         if: ${{ matrix.buildplat[1] == 'pyodide_wasm32' }}
         run: |
           echo "CIBW_PLATFORM=pyodide" >> "$GITHUB_ENV"
 
-      - name: Build wheel
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v3.1.4
         env:
           CIBW_BUILD: ${{ matrix.python }}-${{ matrix.buildplat[1] }}
           SRC: ${{ github.workspace }}/numpy-src
-        run: |
-          python -m pip install cibuildwheel==3.1.4
-          python -m cibuildwheel numpy-src --config-file cibuildwheel.toml --output-dir ./dist
+        with:
+           package-dir: numpy-src
+           output-dir: dist
+           config-file: cibuildwheel.toml
+
+#      - name: Build wheel
+#        env:
+#          CIBW_BUILD: ${{ matrix.python }}-${{ matrix.buildplat[1] }}
+#          SRC: ${{ github.workspace }}/numpy-src
+#        run: |
+#          python -m pip install cibuildwheel==3.1.4
+#          python -m cibuildwheel numpy-src --config-file cibuildwheel.toml --output-dir ./dist
 
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
