--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -143,6 +143,11 @@ jobs:
             echo "CIBW_ENVIRONMENT_MACOS=PKG_CONFIG_PATH=$PWD/.openblas" >> "$GITHUB_ENV"
           fi
 
+      - name: Pyodide setup
+        if: ${{ matrix.buildplat[1] == 'pyodide_wasm32' }}
+        run: |
+          echo "CIBW_PLATFORM=pyodide" >> "$GITHUB_ENV"
+
       - name: Build wheels
         uses: pypa/cibuildwheel@c923d83ad9c1bc00211c5041d0c3f73294ff88f6
         env:
