--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -49,18 +49,18 @@ jobs:
         # https://github.com/github/feedback/discussions/7835#discussioncomment-1769026
         buildplat:
           - [ubuntu-22.04, manylinux_x86_64, ""]
-          - [ubuntu-22.04, musllinux_x86_64, ""]
-          - [ubuntu-22.04-arm, manylinux_aarch64, ""]
-          - [ubuntu-22.04-arm, musllinux_aarch64, ""]
-          - [macos-13, macosx_x86_64, openblas]
-
-          # targeting macos >= 14. Could probably build on macos-14, but it would be a cross-compile
-          - [macos-13, macosx_x86_64, accelerate]
-          - [macos-14, macosx_arm64, openblas]
-          - [macos-14, macosx_arm64, accelerate]
-          - [windows-2022, win_amd64, ""]
-          - [windows-2022, win32, ""]
-          - [windows-11-arm, win_arm64, ""]
+#          - [ubuntu-22.04, musllinux_x86_64, ""]
+#          - [ubuntu-22.04-arm, manylinux_aarch64, ""]
+#          - [ubuntu-22.04-arm, musllinux_aarch64, ""]
+#          - [macos-13, macosx_x86_64, openblas]
+#
+#          # targeting macos >= 14. Could probably build on macos-14, but it would be a cross-compile
+#          - [macos-13, macosx_x86_64, accelerate]
+#          - [macos-14, macosx_arm64, openblas]
+#          - [macos-14, macosx_arm64, accelerate]
+#          - [windows-2022, win_amd64, ""]
+#          - [windows-2022, win32, ""]
+#          - [windows-11-arm, win_arm64, ""]
         python: ["cp311", "cp312", "cp313", "cp313t", "cp314", "cp314t", "pp311"]
         exclude:
           # Don't build PyPy 32-bit windows
@@ -79,8 +79,6 @@ jobs:
           - buildplat: [ macos13, macosx_x86_64, openblas ]
             python: "cp314t"
         include:
-          - buildplat: [ ubuntu-22.04, pyodide_wasm32, "" ]
-            python: "cp312"
           - buildplat: [ ubuntu-22.04, pyodide_wasm32, "" ]
             python: "cp313"
     env:
@@ -224,7 +222,7 @@ jobs:
 
   testpypi-publish:
     name: Publish release to TestPyPI
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'testpypi'
+#    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'testpypi'
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     environment:
@@ -238,13 +236,18 @@ jobs:
         with:
           path: dist
 
-      - name: Publish
-        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          skip-existing: true
-          print-hash: true
-          attestations: true
+      - name: Remove wasm wheels
+        run: |
+          rm dist/*wasm*.whl
+          ls -al dist
+
+#      - name: Publish
+#        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
+#        with:
+#          repository-url: https://test.pypi.org/legacy/
+#          skip-existing: true
+#          print-hash: true
+#          attestations: true
 
   check_version:
     name: Ensure commit is tag before upload to PyPi
@@ -291,6 +294,11 @@ jobs:
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
         with:
           path: dist
+
+      - name: Remove wasm wheels
+        run: |
+          rm dist/*wasm*.whl
+          ls -al dist
 
       - name: Publish
         uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
